# EmailMicroservice

./: .env.prod  .gitignore  README.md  alembic.ini  docker-compose.yml  mailu.env  pyproject.toml
app/: db.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0641eaa290d6_initial_migration.py  23ec701e26e7_initial_migration.py  b48a86472d4b_initial_migration.py
app/api/v1/: endpoints.py
app/core/: config.py  logger.py
app/models/: email.py
app/schemas/: email.py
app/services/: email_service.py  imap_service.py  stats_service.py
tests/: conftest.py  test_email_receiving.py  test_email_sending.py  test_email_stats.py
