[tool.poetry]
name = "app"
version = "0.1.0"
description = "Microservice for sendind and recieving emails"
authors = ["Maria Bondareva <mnikitina2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.41"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
pytest = "^8.4.0"
alembic = "^1.16.1"
pydantic-settings = "^2.9.1"
email-validator = "^2.2.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.3"
